--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,11 @@
 spring:
   jpa:
     hibernate:
-      ddl-auto : update
+      ddl-auto : create
     show-sql: true
   datasource:
     url: jdbc:mysql://localhost:3306/ebanking
     username: root
     password: ayadi12345
+  server:
+    port: 8080
